# genesis2025

./: .gitignore  PROJECT_STATUS.md  README.md
backend/: .coverage  .env.example  SETUP.md  analytics.py  analytics_core.py  check_csv.py  create_and_load_data.py  db.py  docker-compose.yml  inference_service.py  main.py  outside.txt  pytest.ini  replay.py  requirements.txt  session_replay.py  session_strategy.py  simple_load_data.py  snapshot_processor.py  strategy_service.py  test_backend_db.py  test_db.py  test_features.py  test_websocket.py
backend/analytics/: analytics_client.py  analytics_pb2.py
backend/grpc_client/: analytics_client.py  analytics_pb2.py  analytics_pb2_grpc.py
backend/loader/: load_l2_data.py
backend/models/: user.py
backend/proto/: live.proto
backend/routers/: auth.py
backend/rpc_stubs/: live_pb2_grpc.py
backend/schemas/: auth.py  requests.py
cpp_engine/: CMakeLists.txt  Dockerfile
cpp_engine/proto/: analytics.proto
cpp_engine/src/: analytics_engine.cpp  analytics_engine.h  server.cpp
docs/: 10_report_systems.md  11_quick_start_report_service.md  12_POW.md  1_Project-Status.md  2_Features_shipped.md  4_Cpp_Engine_Microservice_Setup.md  5_Cpp_Engine_Integration.md  6_Market_Ingestor_Microservice(Live Mode Integration).md  9_ML_model_training_optimisations_info.md  CPP_ENGINE_SETUP.md  Complete_POW.md  FIX_LIVE_MODE_GRPC_ISSUE.md  README.md  TROUBLESHOOTING_DATA_FLOW.md  arch copy.txt
market-microstructure/: index.html  package-lock.json  package.json
market_ingestor/: Dockerfile  binance_depth.py  main.py  requirements.txt
(+62 files in other folders)
